# PINAC_Workspace

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: pull_request_template.md
app/: electron-builder.json5  package-lock.json  package.json  vite.config.ts
app/electron/: electron-env.d.ts  main.ts  preload.ts
app/electron/handlers/: customProviderHandler.ts  ollamaHandler.ts
app/electron/ipc/: ai.ts  auth.ts  file.ts  settings.ts  user.ts  window.ts
app/electron/model/: ollama.ts
app/electron/services/: webSearchService.ts
app/electron/utilis/: masterKeyManager.ts  tokenManager.ts
app/electron/utils/: authManager.ts  masterKeyManager.ts  tokenManager.ts
app/electron/windows/: mainWindow.ts
app/src/: App.tsx  declarations.d.ts  index.css  index.tsx  types.ts
app/src/components/: ModalBox.tsx
app/src/config/: customProviders.ts  models.ts
app/src/context/: Authentication.tsx
app/src/contexts/: AppProviders.tsx  AttachmentContext.tsx  Authentication.tsx  ChatContext.tsx  ModalBox.tsx  ModelContext.tsx  (+4 more)
backend/: .env.example  app.py  main.py  pyproject.toml  requirements.txt
backend/app/api/: app.py  logging.py  middleware.py  schemas.py
backend/app/api/routes/: __init__.py  chat.py  health.py  search.py
backend/app/chat_service/: __init__.py  service.py
backend/app/config/: __init__.py  settings.py
backend/app/web_search/: __init__.py  crawler.py  dependencies.py  exceptions.py  models.py  service.py  tavily_search.py
electron/: main.ts
src/components/: greetingText.tsx
(+24 files in other folders)
