[project]
name = "pinac_workspace_backend"
version = "3.0.1"
description = "Python backend server for Pinac Workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=25.3",
    "fastapi>=0.115.0",
    "crawl4ai>=0.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
